2017-12-16  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp-test32-environment-variables-and-port-numbers):
	Adapt check for systems which do not support "echo -n".  (Bug#29712)
	(tramp-test41-asynchronous-requests):
	Use $REMOTE_PARALLEL_PROCESSES.  Flush cache prior file operations.

2017-12-15  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp-test32-environment-variables-and-port-numbers):
	Skip for macOS.  (Bug#29712)

2017-12-08  Michael Albinus  <michael.albinus@gmx.de>

	Version 2.3.3 released.

	* tramp-tests.el (tramp-test21-file-links): Extend test.
	(tramp-test42-delay-load, tramp-test42-remote-load-path):
	Skip unless Emacs >= 26.

2017-12-06  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp-test11-copy-file)
	(tramp-test12-rename-file, tramp-test24-file-acl)
	(tramp-test25-file-selinux, tramp--test-check-files):
	Handle also quoted file names.
	(tramp-test21-file-links): Fix file name quoting test.
	(tramp-test24-file-acl): Be more robust for "smb" method.
	(tramp-test35-make-auto-save-file-name): Enable hidden test cases.

2017-11-30  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp-test42-auto-load): Make it more
	robust.  Don't skip.

2017-11-29  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp-test06-directory-file-name): Extend test.
	(tramp-test17-insert-directory): Make check more robust.
	(tramp-test42-auto-load): Combine several let forms.
	(tramp-test42-delay-load, tramp-test42-recursive-load)
	(tramp-test42-remote-load-path, tramp-test43-unload): Rename.

2017-11-27  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp--test-mock-p): New defun.
	(tramp-test32-environment-variables-and-port-numbers)
	(tramp-test41-asynchronous-requests): Use it.
	(tramp-test42-auto-load): New test.  (Bug#29163)
	(tramp-test43-recursive-load, tramp-test44-remote-load-path)
	(tramp-test45-delay-load, tramp-test46-unload): Rename.
