@@ -1,3 +1,8 @@
+2018-01-04  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp-tests.el (ert-x): Require it.
+	(tramp-test10-write-region): Extend test.
+
 2017-12-16  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp-tests.el (tramp-test32-environment-variables-and-port-numbers):
